--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
 .App__nav-list {
   display: flex;
-  justify-content: end;
   gap: 1rem;
+  justify-content: end;
   padding: 1rem;
 }
 
 .App__nav-item {
   margin-bottom: 1rem;
+}
+
+@media (min-width: 1440px) {
+  .App__nav-list {
+    gap: 3rem;
+  }
+
+  .App__nav-item {
+    transition: 0.3s;
+  }
+
+  .App__nav-item:hover {
+    color: #ff0000;
+    font-weight: 900;
+    letter-spacing: -1px;
+  }
 }
