--- a/src/components/Quote.css
+++ b/src/components/Quote.css
@@ -1,5 +1,5 @@
 .Quote {
-  margin: 1.5rem 0;
+  margin: 2rem 0;
 }
 
 .Quote__text {
@@ -8,7 +8,7 @@
 }
 
 .Quote__reference {
-  color: #808080;
+  color: var(--grey);
   font-size: 0.8rem;
   line-height: 1.1rem;
   margin: 0.2rem 0;
