--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -1,16 +1,10 @@
 .Logo {
-  margin: 0 0 1.5rem;
+  margin: 0 0 2rem;
   width: 100%;
 }
 
 @media (min-width: 760px) {
   .Logo {
-    margin: 1rem 0 3rem;
-  }
-}
-
-@media (min-width: 1440px) {
-  .Logo {
-    margin: auto;
+    max-width: 48rem;
   }
 }
