--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -1,10 +1,17 @@
 .Title {
   font-size: 1.5rem;
   font-weight: 500;
+  margin: 2rem 0;
 }
 
 @media (min-width: 768px) {
   .Title {
     font-size: 2rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .Title {
+    margin: 0;
   }
 }
