--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -4,14 +4,19 @@
 }
 
 .About__image {
-  /* border-radius: 50% 50% 0.3rem 0.3rem; */
-  border-radius: 1.5rem 0 1.5rem 0;
+  border-radius: 0.5rem;
+}
+
+@media (min-width: 760px) {
+  .About__image {
+    margin-top: 2rem;
+  }
 }
 
 @media (min-width: 1400px) {
   .About {
     display: flex;
-    gap: 2rem;
+    gap: 8rem;
   }
 
   .About__content {
@@ -19,7 +24,6 @@
   }
 
   .About__image {
-    /* background-color: black; */
     flex: 1;
     width: 100%;
     object-fit: cover;
