--- a/src/components/CharacterItem.css
+++ b/src/components/CharacterItem.css
@@ -1,33 +1,35 @@
 .CharacterItem__btn {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid var(--black);
-  padding: 1rem 0;
   width: 100%;
+}
+
+.CharacterItem__btn-image {
+  border-radius: 0.4rem;
+}
+
+.CharacterItem__btn-name {
+  display: inline-block;
+  margin: 0.8rem 0;
 }
 
 @media (min-width: 760px) {
   .CharacterItem {
-    flex: 1 1 30%;
+    flex: 1 1 40%;
   }
 }
 
 @media (min-width: 1440px) {
   .CharacterItem__btn {
-    border-bottom: none;
-    transition: all 0.5s ease-out;
+    transition: all 0.2s ease-out;
   }
 
   .CharacterItem__btn:hover {
-    background-color: var(--red);
-    color: var(--white);
+    color: var(--red);
     font-weight: 900;
     letter-spacing: -1px;
-    padding-left: 2rem;
+    filter: opacity(0.8);
   }
 
-  .CharacterItem__btn-icon {
-    display: none;
-    margin-left: 0.5rem;
+  .CharacterItem {
+    flex: 1 1 20%;
   }
 }
