--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -1,10 +1,4 @@
 .Logo {
-  margin: 0 0 2rem;
-  width: 100%;
-}
-
-@media (min-width: 760px) {
-  .Logo {
-    max-width: 48rem;
-  }
+  margin: 2rem 0;
+  max-width: 38rem;
 }
