--- a/src/pages/Characters.css
+++ b/src/pages/Characters.css
@@ -6,35 +6,59 @@
   margin: 1rem 0;
 }
 
+.Characters__listing-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.Characters__details {
+  display: none;
+}
+
+body:has(.Characters__details.open) {
+  overflow: hidden;
+}
+
+.Characters__details.open {
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.Characters__details-content {
+  background-color: var(--white);
+  border-radius: 0.8rem;
+  margin: auto;
+  padding: 2rem;
+  width: 100vw;
+}
+
+.Characters__details-btn {
+  float: right;
+}
+
 .Characters__details-name {
   color: var(--red);
   font-size: 1.5rem;
   font-weight: 900;
   letter-spacing: -1px;
-  margin: 1rem 0;
 }
 
 .Characters__details-description {
-  line-height: 1.5rem;
+  line-height: 1.3rem;
   margin: 1.5rem 0;
-}
-
-.Characters__listing-list {
-  margin: 2rem 0;
-}
-
-.Characters__details-image {
-  border-radius: 0.5rem;
 }
 
 @media (min-width: 760px) {
   .Characters__loading-image {
     margin: 1.5rem auto;
     max-width: 60rem;
-  }
-
-  .Characters__details-image {
-    max-width: 48rem;
   }
 }
 
@@ -49,15 +73,6 @@
     gap: 8rem;
   }
 
-  .Characters__details-name {
-    font-size: 1.5rem;
-    margin: 0;
-  }
-
-  .Characters__listing {
-    flex: 1;
-  }
-
   .Characters__listing-list {
     margin: 0 0 2rem;
   }
@@ -66,7 +81,15 @@
     flex: 1;
   }
 
-  .Characters__details-image {
-    max-width: 100%;
+  .Characters__details-content {
+    max-width: 50rem;
+  }
+
+  .Characters__details-name {
+    font-size: 1.5rem;
+  }
+
+  .Characters__listing {
+    flex: 1;
   }
 }
